--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ msgpack==1.1.2
 narwhals==2.15.0
 numba==0.63.1
 numpy==2.3.5
+nvidia-nccl-cu12==2.29.2
 packaging==25.0
 pandas==2.3.3
 pillow==12.1.0
@@ -55,9 +56,9 @@ threadpoolctl==3.6.0
 toml==0.10.2
 toolz==1.1.0
 tornado==6.5.4
+tqdm==4.67.1
 typing-extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
 watchdog==6.0.0
-scikit-learn 
-xgboost
+xgboost==3.1.3
